--- a/.github/workflows/sast.yaml
+++ b/.github/workflows/sast.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Gitleaks - Secrets Scan
         uses: gitleaks/gitleaks-action@v2
         with:
-          fail: true
+          fail: false
 
       # Go SAST (injection, crypto, file ops)
       - name: Gosec - Go Security Scanner
